--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <img class="feedback" src="Depoimentos de Clientes Satisfeitos 1.png" alt="">
 <h2>contatos</h2>
 <div id="faleconosco">
-    <img src="icons/phone-call.png" alt="">
+    <img src="phone-call.png" alt="">
     <p>+55 62 99107-4288</p>
-    <img src="icons/mail.png" alt="">
+    <img src="mail.png" alt="">
     <p>mundoludico21@gmail.com</p>
-    <img src="icons/instagram.png" alt="">
+    <img src="instagram.png" alt="">
     <p>@mundoludico21</p>
 
 </div>
